--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
        <dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
-			<version>2.4.2</version>
+			<version>2.1.0</version>
 		</dependency>
 		
 
@@ -190,15 +190,23 @@
 					<version>2.1</version>
 					<configuration>
 						<path>/shiro</path>
-						<port>8080</port>
+<!-- 						<port>8080</port> -->
 						<uriEncoding>UTF-8</uriEncoding>
 						<contextReloadable>true</contextReloadable>
-<!-- 						<contextFile>src/test/resources/context.xml</contextFile> -->
-<!-- 						<url>http:localhost:8080/shiro/text</url> -->
 						<update>true</update>
 						<server>tomcat7</server>
 						<username>admin</username>
 						<password>admin</password>
+<!-- 						<attachArtifactClassifier> -->
+<!--                            default value is exec-war but you can customize -->
+<!--                         </attachArtifactClassifier> -->
+                        <attachArtifactClassifierType>
+                             jar
+                        </attachArtifactClassifierType>
+							<httpsPort>8443</httpsPort>
+							<keystoreFile>E:/localhost.keystore</keystoreFile>
+							<keystorePass>abc123</keystorePass>
+							<protocol>org.apache.coyote.http11.Http11AprProtocol</protocol>
 					</configuration>
 				</plugin>
 
