--- a/pom.xml
+++ b/pom.xml
@@ -190,7 +190,7 @@
 					<version>2.1</version>
 					<configuration>
 						<path>/shiro</path>
-<!-- 						<port>8080</port> -->
+ 						<port>8080</port>
 						<uriEncoding>UTF-8</uriEncoding>
 						<contextReloadable>true</contextReloadable>
 						<update>true</update>
